# Lightcord

./: .gitignore  README.md  pyproject.toml  requirements.txt
lightcord/: __init__.py  gateway.py  handlers.py  heartbeats.py  literals.py  rest_api.py  typedata.py
lightcord/events/: __init__.py  all_message_delete.py  message_create.py  ready.py
lightcord/types/: Application.py  Channel.py  Guild.py  Message.py  User.py
